fixed dark mode color bugs

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body > #root > div {
+  height: 100vh;
+}
+
 .cell-animation {
   animation: revealCharCell linear;
   animation-duration: 0.15s;
